--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "auto-sell-usdt",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.8.1",
-  "dependencies": {
-    "axios": "^1.8.4",
-    "dotenv": "^16.5.0",
-    "max-exchange-api-node": "^3.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.1"
-  }
+	"name": "daily-usdt-auto-sell-worker",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"deploy": "wrangler deploy --env production",
+		"dev": "wrangler dev --test-scheduled",
+		"start": "wrangler dev --test-scheduled",
+		"cf-typegen": "wrangler types",
+		"secret": "wrangler secret put --env production",
+		"tail": "pnpm wrangler tail --env production"
+	},
+	"devDependencies": {
+		"max-exchange-api-node": "^3.0.2",
+		"typescript": "^5.5.2",
+		"wrangler": "^4.20.5"
+	}
 }
