--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"dotenv": "^16.5.0",
 		"max-exchange-api-node": "^3.0.2",
-		"miniflare": "^4.20250617.3",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3",
 		"wrangler": "^4.20.5"
 	}
