--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy --env production",
 		"dev": "wrangler dev --test-scheduled",
-		"start": "wrangler dev --test-scheduled",
+		"start": "tsx src/run.ts",
 		"cf-typegen": "wrangler types",
 		"secret": "wrangler secret put --env production",
 		"tail": "pnpm wrangler tail --env production"
@@ -15,7 +15,7 @@
 		"@types/node": "^24.0.3",
 		"dotenv": "^16.5.0",
 		"max-exchange-api-node": "^3.0.2",
-		"ts-node": "^10.9.2",
+		"tsx": "^4.20.3",
 		"typescript": "^5.8.3",
 		"wrangler": "^4.20.5"
 	}
