--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-	"name": "daily-usdt-auto-sell-worker",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"deploy": "wrangler deploy --env production",
-		"dev": "wrangler dev --test-scheduled",
-		"start": "tsx src/run.ts",
-		"cf-typegen": "wrangler types",
-		"secret": "wrangler secret put --env production",
-		"tail": "pnpm wrangler tail --env production"
-	},
-	"devDependencies": {
-		"@types/node": "^24.0.3",
-		"dotenv": "^16.5.0",
-		"max-exchange-api-node": "^3.0.2",
-		"tsx": "^4.20.3",
-		"typescript": "^5.8.3",
-		"wrangler": "^4.20.5"
-	}
+  "name": "daily-usdt-auto-sell-worker",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "start": "tsx src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.3",
+    "dotenv": "^16.5.0",
+    "max-exchange-api-node": "^3.0.2",
+    "tsx": "^4.20.3"
+  }
 }
